--- a/index29.html
+++ b/index29.html
@@ -48,6 +48,6 @@ input:nth-child(2){
           <input id="validator" type="button" value="验证" />
           <p id="msg">必填，长度为4-16个字符</p>
       </label>
-      <script type="text/javascript" src="task29.js"></script>
+      <script type="text/javascript" src="index29.js"></script>
 </body>
 </html>
